# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = ioos_tools/_version.py
versionfile_build = ioos_tools/_version.py
tag_prefix = v

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    E203 W503
    docs/* ALL
    versioneer.py ALL
    ioos_tools/_version.py ALL

[metadata]
description-file = README.md
license_file = LICENSE.txt
